logs/hampercli.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/.libs_cffi_backend'...
Listing './lib/python3.5/site-packages/HamperCLI-1.0.4.egg-info'...
Listing './lib/python3.5/site-packages/SecretStorage-2.3.1.egg-info'...
Listing './lib/python3.5/site-packages/asn1crypto'...
Listing './lib/python3.5/site-packages/asn1crypto/_perf'...
Listing './lib/python3.5/site-packages/asn1crypto-0.24.0.dist-info'...
Listing './lib/python3.5/site-packages/cffi'...
Listing './lib/python3.5/site-packages/cffi-1.11.3.dist-info'...
Listing './lib/python3.5/site-packages/cryptography'...
Listing './lib/python3.5/site-packages/cryptography/hazmat'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/backends'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/backends/openssl'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/bindings'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/bindings/openssl'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/asymmetric'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/ciphers'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/kdf'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/twofactor'...
Listing './lib/python3.5/site-packages/cryptography/x509'...
Listing './lib/python3.5/site-packages/cryptography-2.1.4.dist-info'...
Listing './lib/python3.5/site-packages/docopt-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/hamper'...
Compiling './lib/python3.5/site-packages/hamper/authenticator.py'...
***   File "./lib/python3.5/site-packages/hamper/authenticator.py", line 17
    print colored("Authenticating user...", "blue")
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/hamper/certifier.py'...
***   File "./lib/python3.5/site-packages/hamper/certifier.py", line 52
    print colored("Generating certificate...", "blue")
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/hamper/hamper.py'...
***   File "./lib/python3.5/site-packages/hamper/hamper.py", line 205
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/hamper/helpers'...
Compiling './lib/python3.5/site-packages/hamper/identifier.py'...
***   File "./lib/python3.5/site-packages/hamper/identifier.py", line 41
    print colored("Generating app ID...", "blue")
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/hamper/provisioner.py'...
***   File "./lib/python3.5/site-packages/hamper/provisioner.py", line 42
    print colored("Generating provisioning profile...", "blue")
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/keyring'...
Listing './lib/python3.5/site-packages/keyring/backends'...
Listing './lib/python3.5/site-packages/keyring/tests'...
Listing './lib/python3.5/site-packages/keyring/tests/backends'...
Listing './lib/python3.5/site-packages/keyring/util'...
Listing './lib/python3.5/site-packages/keyring-10.6.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pycparser'...
Listing './lib/python3.5/site-packages/pycparser/ply'...
Listing './lib/python3.5/site-packages/pycparser-2.18.egg-info'...
Listing './lib/python3.5/site-packages/secretstorage'...
Listing './lib/python3.5/site-packages/selenium'...
Listing './lib/python3.5/site-packages/selenium/common'...
Listing './lib/python3.5/site-packages/selenium/webdriver'...
Listing './lib/python3.5/site-packages/selenium/webdriver/android'...
Listing './lib/python3.5/site-packages/selenium/webdriver/blackberry'...
Listing './lib/python3.5/site-packages/selenium/webdriver/chrome'...
Listing './lib/python3.5/site-packages/selenium/webdriver/common'...
Listing './lib/python3.5/site-packages/selenium/webdriver/common/actions'...
Listing './lib/python3.5/site-packages/selenium/webdriver/common/html5'...
Listing './lib/python3.5/site-packages/selenium/webdriver/edge'...
Listing './lib/python3.5/site-packages/selenium/webdriver/firefox'...
Listing './lib/python3.5/site-packages/selenium/webdriver/firefox/amd64'...
Listing './lib/python3.5/site-packages/selenium/webdriver/firefox/x86'...
Listing './lib/python3.5/site-packages/selenium/webdriver/ie'...
Listing './lib/python3.5/site-packages/selenium/webdriver/opera'...
Listing './lib/python3.5/site-packages/selenium/webdriver/phantomjs'...
Listing './lib/python3.5/site-packages/selenium/webdriver/remote'...
Listing './lib/python3.5/site-packages/selenium/webdriver/safari'...
Listing './lib/python3.5/site-packages/selenium/webdriver/support'...
Listing './lib/python3.5/site-packages/selenium/webdriver/webkitgtk'...
Listing './lib/python3.5/site-packages/selenium-3.8.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/termcolor-1.1.0.egg-info'...
Listing './selenium'...
Listing './selenium/webdriver'...
Listing './selenium/webdriver/firefox'...
Listing './selenium/webdriver/firefox/amd64'...
Listing './selenium/webdriver/firefox/x86'...
Listing './selenium/webdriver/remote'...
Listing './share'...
Listing './share/python-wheels'...
